# agent-skills

./: .env.example  .gitignore  .mcp.json  .nycrc  .prettierrc  .releaserc.js  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.js  jsconfig.json  lint-staged.config.js  marketplace.json  package.json
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  new_skill.yml
.github/workflows/: code-review.yml  evals.yml  release.yml  test.yml
scripts/: bundle-skills.js  bundle.js  generate-agent-yaml.js  generate-plugin-manifest.js  parse-skills.js  run-evals.js  run-tests.js
skills/gh-notification-summary/: .env.example  SKILL.md  package.json  pyproject.toml  requirements.txt
skills/gh-notification-summary/evals/: evals.json
skills/gh-notification-summary/scripts/: caching.js  gh_notifications.py  github.js  server.js
skills/gh-notification-summary/scripts/templates/: dashboard.html
skills/gh-notification-summary/templates/: dashboard.css  dashboard.html  dashboard.js
skills/gh-notification-summary/tests/: caching.test.js  cli.test.js  github.test.js  notifications-test-mode.test.js  server.test.js  test_gh_notifications.py
skills/gh-notification-summary/tests/fixtures/: octokit-mock.js  octokit-responses.json
